[package]
name = "advent-of-code-2024"
description = "Solving the Advent of Code 2024 in Rust."
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"

[[bin]]
name = "day1a"
path = "src/bin/day1a/main.rs"

[[bin]]
name = "day1b"
path = "src/bin/day1b/main.rs"

[[bin]]
name = "day2a"
path = "src/bin/day2a/main.rs"
